trustfall_core/test_data/tests/valid_queries/implicit_tag_and_output_names.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    One {
        value @tag @output

        successor {
            value @output(name: "successor_value") @filter(op: ">", value: ["%value"])
        }
    }
}"#,
    arguments: {},
)
