trustfall_core/test_data/tests/parse_errors/invalid_filter_op.graphql.ron
TestGraphQLQuery (
    schema_name: "filesystem",
    query: r#"
{
    OriginDirectory {
        name @output @filter(op: "non_existent", value: ["$dir_name"])
    }
}"#,
    arguments: {
        "dir_name": String("<origin>")
    },
)
